# autotests

./: .gitignore  conftest.py  pyproject.toml  settings.py
assertions/: brands_assertion.py  products_assertion.py  users_assertions.py
models/: user.py
tests/api/: test_auth.py  test_brands.py  test_product.py
utils/: api_client.py  data_generator.py
utils/clients/: brands_client.py  product_client.py  users_client.py
