[project]
name = "project"
version = "0.1.0"
description = ""
authors = [
    {name = "Anna P",email = "annapet200313@yandex.ru"}
]
requires-python = ">=3.12"
dependencies = [
    "pytest (>=9.0.3,<10.0.0)",
    "selenium (>=4.43.0,<5.0.0)",
    "playwright (>=1.59.0,<2.0.0)",
    "requests (>=2.33.1,<3.0.0)",
    "allure-pytest (>=2.16.0,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=26.3.1,<27.0.0)",
    "isort (>=8.0.1,<9.0.0)",
    "flake8 (>=7.3.0,<8.0.0)"
]
